# analyze

./: .gitignore  .gitmodules  CMakeLists.txt
Complex/Include/: Complex.h
Complex/Source/: Complex.cpp
Include/: ComplexTest.h  MatrixTest.h
Linalg/: CMakeLists.txt
Source/: analyze.cpp  test.cpp
